--- a/index.html
+++ b/index.html
@@ -10,5 +10,20 @@
     <link rel="stylesheet" href="style.css">
 <body>
 
+    <header>
+        <img src="./assets/logo.svg" alt="Logo da NLW Copa">
+    </header>
+
+    <div class="card">
+
+        <img src="https://github.com/hacles100.png" alt="Foto Héricles Rocha">
+
+        <div class="info">
+            <h1>Héricles Rocha</h1>
+            <p>Sofware Developer</p>
+        </div>
+    </div>
+
+
 </body>
 </html>
